Mon Jan 18 12:04:34 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* test/ruby/test_string.rb: Added extra testcase for test_rstrip_bang
	  and test_lstrip_bang. [fix GH-1178] Patch by @Matrixbirds

Mon Jan 18 11:47:27 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* string.c: fix a typo. [fix GH-1202][ci skip] Patch by @sunboshan

Sun Jan 17 21:15:30 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in: improve ICC (Intel C Compiler) support.

	* configure.in (CXX): The name of icc's c++ compiler is `icpc`.

	* configure.in (warnings): Add `-diag-disable=2259` to suppress
	  noisy warnings: "non-pointer conversion from "..." to "..." may
	  lose significant bits".

	* configure.in (optflags): Add `-fp-model precise` like -fno-fast-math.

	* lib/mkmf.rb: icc supports -Werror=division-by-zero
	  and -Werror=deprecated-declarations, but doesn't support
	  -Wdivision-by-zero and -Wdeprecated-declarations.

Sun Jan 17 20:40:10 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* string.c: Any kind of option is now taking the new code path for
	  upcase/downcase/capitalize/swapcase. :lithuanian can be used for
	  testing if no specific option is desired.
	* test/ruby/enc/test_case_mapping.rb: Adjusted to above.
	  (with Kimihito Matsui)

Sun Jan 17 20:10:10 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode.c: Fixed a logical error and some comments.
	* test/ruby/enc/test_case_mapping.rb: Made tests more general.
	  (with Kimihito Matsui)

Sun Jan 17 17:41:41 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode.c: Removed artificial expansion for Turkic,
	  added hand-coded support for Turkic, fixed logic for swapcase.
	* string.c: Made use of new case mapping code possible from upcase,
	  capitalize, and swapcase (with :lithuanian as a guard).
	* test/ruby/enc/test_case_mapping.rb: Adjusted for above.
	  (with Kimihito Matsui)

Sun Jan 17 15:30:57 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
