@@ -591,6 +591,15 @@ e"
     assert_dedented_heredoc(expect, result)
   end
 
+  def test_dedented_heredoc_with_newline
+    bug11989 = '[ruby-core:72855] [Bug #11989] after escaped newline should not be dedented'
+    result = '  x\n'"  y\n" \
+             "  z\n"
+    expect = 'x\n'"  y\n" \
+             "z\n"
+    assert_dedented_heredoc(expect, result, bug11989)
+  end
+
   def test_dedented_heredoc_with_concatenation
     bug11990 = '[ruby-core:72857] [Bug #11990] concatenated string should not be dedented'
     %w[eos "eos" 'eos'].each do |eos|
